plugins {
	id 'java'
	id 'org.springframework.boot' version '4.0.7'
	id 'io.spring.dependency-management' version '1.1.7'

	id 'org.openrewrite.rewrite' version 'latest.release'
}

group = 'org.example'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(25)
	}
}

repositories {
	mavenCentral()
}

dependencies {

	compileOnly 'org.projectlombok:lombok:1.18.46'
	annotationProcessor 'org.projectlombok:lombok:1.18.46'
	annotationProcessor "org.projectlombok:lombok-mapstruct-binding:0.2.0"
	implementation 'org.mapstruct:mapstruct:1.6.3'
	annotationProcessor 'org.mapstruct:mapstruct-processor:1.6.3'
	runtimeOnly 'com.h2database:h2:2.2.224'
	runtimeOnly "jakarta.xml.bind:jakarta.xml.bind-api:4.0.5"
	runtimeOnly "javax.xml.bind:jaxb-api:2.3.1"
	implementation 'io.soabase.record-builder:record-builder-core:41'
	annotationProcessor 'io.soabase.record-builder:record-builder-processor:41'
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:3.0.3'

	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-webmvc'
	implementation 'org.springframework.boot:spring-boot-starter-kafka'
	implementation "org.springframework.boot:spring-boot-starter-restclient:4.0.7"
    developmentOnly 'org.springframework.boot:spring-boot-devtools'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.boot:spring-boot-testcontainers'
	testImplementation 'org.springframework.kafka:spring-kafka-test'
	testImplementation 'org.testcontainers:testcontainers-junit-jupiter'
	testImplementation 'org.testcontainers:testcontainers-kafka'
	testImplementation 'org.awaitility:awaitility:4.2.1'
	testImplementation "org.springframework.boot:spring-boot-resttestclient:4.0.7"
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

	rewrite("org.openrewrite.recipe:rewrite-spring:6.35.0")
	rewrite("org.openrewrite.recipe:rewrite-migrate-java:3.40.0")
}

tasks.named('test') {
	useJUnitPlatform()
}

rewrite {
	activeRecipe("org.openrewrite.java.migrate.UpgradeToJava25")
	activeRecipe("org.openrewrite.java.spring.boot4.UpgradeSpringBoot_4_0")
}